--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,9 +2,8 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'       //Firebase plugins
-    id "kotlin-kapt"                          //Dagger plugins
     id "dagger.hilt.android.plugin"           //Dagger plugins
-
+    id "kotlin-kapt"
 }
 
 android {
@@ -41,7 +40,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.2.0'
+        kotlinCompilerExtensionVersion compose_version
     }
     packagingOptions {
         resources {
@@ -56,15 +55,21 @@ dependencies {
     //implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.compose.material3:material3:1.0.0-alpha11'
+    //implementation 'androidx.compose.material3:material3:1.0.0-alpha11'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+
+
+
+    //Compose
+    implementation platform("androidx.compose:compose-bom:$compose_bom_version")
+    implementation "androidx.compose.material3:material3"
+    implementation "androidx.compose.ui:ui"
+    implementation "androidx.compose.ui:ui-tooling-preview"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4"
+    debugImplementation "androidx.compose.ui:ui-tooling"
+    debugImplementation "androidx.compose.ui:ui-test-manifest"      //try
 
     //Firebase
     implementation platform('com.google.firebase:firebase-bom:31.2.2')
@@ -77,5 +82,17 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
     //Hilt Navigation Compose
     implementation "androidx.hilt:hilt-navigation-compose:$hilt_navigation_compose_version"
+
+    //Play Services Auth
+    implementation "com.google.android.gms:play-services-auth:$play_services_auth_version"
+
+    //Paging Compose
+    implementation "androidx.paging:paging-compose:$paging_compose_version"
+
+    //Coil
+    implementation "io.coil-kt:coil-compose:$coil_compose_version"
+
+    //Accompanist
+    implementation "com.google.accompanist:accompanist-navigation-animation:$accompanist_version"
 
 }
