--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,13 @@
 buildscript {
     ext {
-        compose_version = '1.2.0'
+        accompanist_version = '0.28.0'
+        coil_compose_version = '2.2.2'
+        compose_bom_version = '2023.01.00'
+        compose_version = '1.4.3'
         hilt_navigation_compose_version = '1.0.0'
         hilt_version = '2.45'
-
+        paging_compose_version = '1.0.0-alpha18'
+        play_services_auth_version = '20.4.1'
     }
     dependencies {
         classpath 'com.google.gms:google-services:4.3.14'
@@ -13,5 +17,5 @@ buildscript {
 plugins {
     id 'com.android.application' version '7.4.1' apply false
     id 'com.android.library' version '7.4.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
 }
