--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        accompanist_version = '0.28.0'
+        accompanist_version =  '0.30.1'                         //'0.28.0'
         coil_compose_version = '2.2.2'
         compose_bom_version = '2023.01.00'
         compose_version = '1.4.3'
