--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
 
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.4.1"
 
     //Compose
     implementation platform("androidx.compose:compose-bom:$compose_bom_version")
@@ -76,6 +77,7 @@ dependencies {
     implementation "com.google.firebase:firebase-auth-ktx"
     implementation "com.google.firebase:firebase-database-ktx"
     implementation "com.google.firebase:firebase-firestore-ktx"
+    implementation "com.google.firebase:firebase-storage-ktx"
 
     //Hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
@@ -107,5 +109,10 @@ dependencies {
     implementation("com.squareup.moshi:moshi:1.14.0")
     implementation("com.squareup.moshi:moshi-kotlin:1.14.0")
     kapt("com.squareup.moshi:moshi-kotlin-codegen:1.14.0")
+
+
+
+    //Splash Screen Navigation
+    implementation("androidx.navigation:navigation-compose:$nav_version")
 
 }
