--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".MyApplication"
@@ -18,10 +19,27 @@
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.CapstoneProject9">
+            <tools:validation testUrl="https://ccwebsite121100.000webhostapp.com" />
+            <tools:validation testUrl="https://ccwebsite121100.000webhostapp.com" />
+            <tools:validation testUrl="https://ccwebsite121100.000webhostapp.com" />
+            <tools:validation testUrl="https://ccwebsite121100.000webhostapp.com" />
+            <tools:validation testUrl="https://ccwebsite121100.000webhostapp.com" />
+            <tools:validation testUrl="https://ccwebsite121100.000webhostapp.com" />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:scheme="https"
+                    android:host="ccwebsite121100.000webhostapp.com" />
             </intent-filter>
         </activity>
     </application>
