--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,12 @@
 buildscript {
     ext {
-        accompanist_version =  '0.30.1'                         //'0.28.0'
+        accompanist_version =  '0.30.0'                         //'0.30.1'                         //'0.28.0'
         coil_compose_version = '2.2.2'
         compose_bom_version = '2023.01.00'
-        compose_version = '1.4.3'
+        compose_version = '1.4.2'
         hilt_navigation_compose_version = '1.0.0'
         hilt_version = '2.45'
+        nav_version = '2.5.3'
         paging_compose_version = '1.0.0-alpha18'
         play_services_auth_version = '20.4.1'
     }
@@ -26,7 +27,7 @@ buildscript {
 plugins {
     id 'com.android.application' version '7.4.1' apply false
     id 'com.android.library' version '7.4.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.10' apply false                        //'1.8.10'
     id 'com.google.dagger.hilt.android' version "2.45" apply false
     id 'com.google.gms.google-services' version "4.3.15" apply false
 }
