--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,7 +110,9 @@ dependencies {
     implementation("com.squareup.moshi:moshi-kotlin:1.14.0")
     kapt("com.squareup.moshi:moshi-kotlin-codegen:1.14.0")
 
-
+    //Google Maps
+    implementation "com.google.maps.android:maps-compose:$maps_compose_version"
+    implementation "com.google.android.gms:play-services-maps:$play_services_maps_version"
 
     //Splash Screen Navigation
     implementation("androidx.navigation:navigation-compose:$nav_version")
