--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,4 +117,8 @@ dependencies {
     //Splash Screen Navigation
     implementation("androidx.navigation:navigation-compose:$nav_version")
 
+
+    // STAR Rating
+    implementation 'io.github.a914-gowtham:compose-ratingbar:1.2.3'
+
 }
