--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,9 @@ buildscript {
         // Make sure that you have the following two repositories
         google()  // Google's Maven repository
 
-        mavenCentral()  // Maven Central repository
+        //mavenCentral()  // Maven Central repository
+
+        mavenCentral { url 'https://jitpack.io' }
 
     }
 
